2006-05-17  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: rework image formatting,
	more is done in the formatting functions.
	Redundancy between menu entry and menu description is 
	handled in the formatting functions.
	* texi2html.pl:
	Close correctly the @-commands in pass_structure.
	Remove unneeded error messages for formats not matching when
	it cannot happen.
	Use the same element in menu description and menu links.
	Try to close paragraph when searching for the right format
	to close.
	Remove unclosed accent commands from the 'command_stack'.
	Indentation fixes.
	* T2h_l2h.pm: use the document name in the perl cache name.
	* Tests/*: more tests for unclosed @-commands.

2006-05-17  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: teletype style is set in 
	table item formatting in texi2html.init, not in the main
	program.
	Add the formats to the 'command_stack' ('style_stack' is renamed
	to 'command_stack').
	Clean the 'cmd_line' related code.
	End of lines are removed in formatting function related with
	'cmd_line', not in the main program.
	Commands surrounding paragraphs aren't handled in the 
	main program anymore, but using 2 'command_stack', one at the
	beginning of the paragraph and one at the end of the paragraph.
	rename 'name' of element to 'text_nonumber'.
	call heading_texi even for nodes.
	give more information to index_element_heading_texi such that
	it is easier to customize those headings.
	Handle NUMBER_SECTIONS in heading_texi and not in the main program
	styles considered to be simple may be customized.
	indentation cleanups.
	* texi2html.pl: handle @center like a regular format. Many
	fixes for @center.
	rename some hash keys to avoid hash keys name clashes.
	revert a change in merge_element_before_anything such that it is
	only done for the first node.
	more duplicate_stack when giving the state to a formatting
	function. This has the added benefit that it sets the command_stack