@@ -271,6 +271,42 @@ result: @emph{\arg\} the \the\ thearg \thearg\ with value \the@value{argument}\
 </p>
 <p>==================================
 </p>
+<p>Define macro without arg
+</p><table><tr><td>&nbsp;</td><td><pre class="example">@macro test1
+test1
+@end macro
+</pre></td></tr></table>
+
+
+<p>Call with {}:
+</p>
+<p>==================================
+</p>
+<p>test1 abc
+</p>
+<p>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-
+</p>
+<p>test1 abc
+</p>
+<p>==================================
+</p>
+<p>Call with something on the line
+</p>
+<p>==================================
+</p>
+<p>test1 abc
+</p>
+<p>&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-
+</p>
+<p>test1 abc
+</p>
+<p>==================================
+</p>
+<p>An empty set value
+</p>
+
+<p>1  1
+</p>
 <hr size="6">
 <a name="SEC_Contents"></a>
 <table cellpadding="1" cellspacing="1" border="0">
